fix spacing

--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -60,7 +60,7 @@
         top: 50px;
         // bottom: 0;
         left: 0;
-        right: 10%;
+        right: 0;
 
         background-color: $primary;
 
@@ -68,7 +68,7 @@
 
         color: white;
 
-        padding-bottom: 30px;
+        padding-bottom: 20px;
 
         @include media($md) {
             position: static;
